Uses real json data

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -31,8 +31,9 @@
 <div id="applist">Applist</div>
 <!--<ul><li>App</li><li>App</li><li>App</li><li>App</li><li>App</li></ul>-->
 <li *ngFor="#app of apps" (click)="onSelect(app)">
-      {{app.name}}
-      <img src="app/icon.jpg" alt="" height="80"/>
+      <p>{{app.name}} </p>
+      <!--<<img src="app/icon.jpg" alt="" height="80"/> -->
+      <img src="http://{{app.icon}}" alt="" height="80" onError="this.src='./app/icon.jpg';"/>
 </li>
 
 
@@ -51,10 +52,12 @@
 	</div>
 </div>
 
-<div id="main_content">
+<div *ngIf="selectedApp" id="main_content">
 
 
-<h1 *ngIf="selectedApp">{{selectedApp.name}} </h1>
+<h1>{{selectedApp.name}} </h1>
+
+
 <!--
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin convallis tristique dolor nec tincidunt. Quisque nec urna vel diam dictum condimentum. Vivamus et lectus maximus, gravida metus vehicula, elementum ipsum. Pellentesque et nisl maximus, pretium quam sit amet, facilisis magna. Morbi vehicula eros eget mauris efficitur, et faucibus elit laoreet. Donec vel dapibus mauris, at scelerisque elit. Aenean nec orci laoreet, rutrum sem id, vulputate eros. Praesent sit amet tincidunt odio. Maecenas porttitor, orci posuere tristique venenatis, nisl quam finibus nisl, sit amet dapibus massa nibh vitae tellus. In consectetur dui magna, sit amet tristique leo blandit commodo. </p>
 
@@ -64,7 +67,10 @@
 
 -->
 
-<p *ngIf="selectedApp"> {{selectedApp.readme}}</p>
+<p> {{selectedApp.readme}}</p>
+
+<iframe width="100%" height="100%" src="http://{{selectedApp.readme}}"></iframe>
+
 
 
 
