--- a/app/app.component.html
+++ b/app/app.component.html
@@ -29,7 +29,9 @@
 
 
 <div id="applist">Applist</div>
-<li *ngFor="let app of apps" (click)="onSelect(app)">
+<li *ngFor="let app of apps" 
+    [class.selected]="app === selectedApp" 
+    (click)="onSelect(app)">
       
       <!--<<img src="app/icon.jpg" alt="" height="80"/> -->
       <img src="http://{{app.icon}}" alt="" height="80" onError="this.src='./app/icon.jpg';"/>
