--- a/app/app.component.html
+++ b/app/app.component.html
@@ -28,16 +28,16 @@
 </div>
 
 
-<div id="applist">Applist</div>
-<li *ngFor="let app of apps" 
-    [class.selected]="app === selectedApp" 
-    (click)="onSelect(app)">
-      
-      <!--<<img src="app/icon.jpg" alt="" height="80"/> -->
-      <img src="http://{{app.icon}}" alt="" height="80" onError="this.src='./app/icon.jpg';"/>
-      <p>{{app.name}} </p>
-</li>
-
+<div id="applist">Applist
+  <li *ngFor="let app of apps" 
+      [class.selected]="app === selectedApp" 
+      (click)="onSelect(app)">
+        
+        <!--<<img src="app/icon.jpg" alt="" height="80"/> -->
+        <img src="http://{{app.icon}}" alt="" width="80" onError="this.src='./app/icon.jpg';"/>
+        <p>{{app.name}} </p>
+  </li>
+</div>
 
 </div>
 
