Removed compiled js & js.map files from "app" dir and changed tsconfig to compile them in "dist" directory. Refactored app.component to use app.component.css instead of style.css. Moved assets from "app" dir to "assets" directory.

--- a/app/app.component.css
+++ b/app/app.component.css
@@ -42,7 +42,15 @@ footer {
 
 #manage_container{
 	
-}#managemode {
 }
+
+#managemode {
+}
+
 #installmode {
+}
+
+.selected {
+  background-color: #CFD8DC !important;
+  color: white;
 }
