Added update functionality

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -72,7 +72,7 @@
     <input type="button" value="Restart" (click)="commandApp(selectedApp, 'restart')">
     <input type="button" value="Uninstall" (click)="commandApp(selectedApp, 'remove')">
     <input type="button" value="Configure">
-    <input type="button" value="Update">
+    <input type="button" value="Update" (click)="commandApp(selectedApp, 'update')">
 	</div>
 </div>
 
