--- a/app/app.component.html
+++ b/app/app.component.html
@@ -14,7 +14,7 @@
 </div>
 <div class="menu_container" id="search_bar">
   <label for="search">Search:</label>
-  <input type="search" name="search" id="search" [ngFormControl]="query">
+  <input type="search" name="search" id="search">
 </div>
 
    <applist [apps]="apps" [selectedMode]="selectedMode"></applist>
