--- a/app/app.component.html
+++ b/app/app.component.html
@@ -26,7 +26,9 @@
 
 	<div class="top_bar" id="headerdiv">Spaceify Appstore</div>
 
-	<router-outlet></router-outlet>
+	<div class="pagecontent">
+		<router-outlet></router-outlet>
+	</div>
 
 </div>
 
