--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ h1 {
   color: #369; 
   font-family: Arial, Helvetica, sans-serif;   
   font-size: 250%;
+  margin-top: 10px;
 }
 h2, h3 { 
   color: #444;
