--- a/app/applist.component.html
+++ b/app/applist.component.html
@@ -3,7 +3,8 @@
       [class.selected]="app === selectedApp" 
       (click)="onSelect(app)">
       
-        <img src="http://{{app.icon}}" alt="" width="80" onError="this.src='./assets/icon.jpg';"/>
+      <img [sp_src]="app.icon" alt="" width="80" onError="this.src='./assets/icon.jpg';">
+       
         <p>{{app.name}} </p>
   </li>
 </div>
