--- a/app/install.component.html
+++ b/app/install.component.html
@@ -3,6 +3,10 @@
 <h1>Install</h1>
 
 <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at libero diam. Nunc eget purus risus. Suspendisse cursus lacus non augue auctor placerat. Sed eleifend bibendum sapien quis porta. Mauris vitae felis eros. Nam volutpat augue quis augue aliquet, ac blandit mi laoreet. Vivamus faucibus ultricies nulla, eget faucibus lacus venenatis non. Nulla facilisi.
+Suspendisse congue orci aliquet malesuada vehicula. Maecenas eget risus quis dui vehicula tincidunt id non dolor. Duis eros quam, commodo non neque ac, porta sodales ligula. Nulla ullamcorper metus sed nunc volutpat pharetra. Pellentesque eget felis in metus tempor condimentum. Aliquam vulputate scelerisque arcu at placerat. Sed luctus dictum nibh, ac euismod nulla dapibus in. Vestibulum non volutpat odio.
 </p>
+
+<searchbar></searchbar>
+
+<applist [apps]="apps" [selectedMode]="selectedMode"></applist>
 
