--- a/app/manage.component.html
+++ b/app/manage.component.html
@@ -3,6 +3,9 @@
 <h1>Manage</h1>
 
 <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at libero diam. Nunc eget purus risus. Suspendisse cursus lacus non augue auctor placerat. Sed eleifend bibendum sapien quis porta. Mauris vitae felis eros. Nam volutpat augue quis augue aliquet, ac blandit mi laoreet. Vivamus faucibus ultricies nulla, eget faucibus lacus venenatis non. Nulla facilisi.
+Curabitur eu massa nec magna cursus feugiat. Pellentesque ullamcorper nisi varius, maximus ipsum sit amet, egestas dolor. Etiam sit amet risus ac quam finibus viverra. Integer pretium in tortor et bibendum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam posuere nulla quis placerat scelerisque. Maecenas cursus ultricies accumsan. Proin ac interdum libero. Cras egestas rutrum nulla, et rutrum nisl maximus eu.
 </p>
 
+<searchbar></searchbar>
+
+<applist [apps]="apps" [selectedMode]="selectedMode"></applist>
