--- a/app/app.component.html
+++ b/app/app.component.html
@@ -3,7 +3,7 @@
 	<div id="left_container">
 
 		<div class="top_bar" id="logodiv">
-			<a routerLink="/intro"><img src="assets/icon.jpg" alt="" height="120"/></a>
+			<a routerLink="/intro"><img class="appstorelogo" src="assets/icon-120p.jpg" alt="" /></a>
 		</div>
 
 		<nav class="menu_container">
