Removed filler text. x

--- a/app/install.component.html
+++ b/app/install.component.html
@@ -1,10 +1,6 @@
 
 
-<h1>Install</h1>
-
-<p>
-Suspendisse congue orci aliquet malesuada vehicula. Maecenas eget risus quis dui vehicula tincidunt id non dolor. Duis eros quam, commodo non neque ac, porta sodales ligula. Nulla ullamcorper metus sed nunc volutpat pharetra. Pellentesque eget felis in metus tempor condimentum. Aliquam vulputate scelerisque arcu at placerat. Sed luctus dictum nibh, ac euismod nulla dapibus in. Vestibulum non volutpat odio.
-</p>
+<h1>Install new apps</h1>
 
 <div class="menu_container" id="search_bar">
 	<label for="search">Search:</label>
