--- a/app/applist.component.html
+++ b/app/applist.component.html
@@ -5,7 +5,7 @@
 			(click)="onSelect(app)">
 
 			<div class="iconcontainer">
-				<img class="icon" [sp_src]="app.icon" alt="" onError="this.src='./assets/icon-80p.jpg';" />
+				<img class="icon" [sp_src]="app.icon" alt="" onError="this.src='./assets/icon-80p.png';" />
 			</div>
 
 			<div class="text">
