--- a/app/app.component.css
+++ b/app/app.component.css
@@ -1,89 +1,66 @@
 @charset "UTF-8";
 #main {
-    width:1020px;
+    width: 100%;
 }
 
-#right_container {
-   width:78%;
-   float:right;
-}
 
-#left_container {
-   
-   width:22%;
-   float:left;
-   color:#AB3C3E;
-}
 
-.menu_container{
-  margin-top: 1em;
-}
-
-.top_bar {
-}
-
-#headerdiv {
-  padding-top: 37px;
-  padding-bottom: 37px;
-}
-
-footer {
-    clear:both;
-}
-
-.appstorelogo {
-  height: 120px;
-}
-
-#logodiv {
-	
-}
-
-#logodiv img{
-	display:block;
-    margin:auto;
-}
-
-#headerdiv {
-	font-size: 40px;
-}
-
-#manage_container{
-	
-}
-
-.selected {
-  background-color: #CFD8DC !important;
-  color: white;
-}
-
-.menu_topic{
-  display: block;
-  box-sizing: border-box;
+#top_bar {
+  background-color: #f2f2f2;
   width: 100%;
-  padding: 1em;
-  border:px solid #d7dada; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:12px;font-family:arial, helvetica, sans-serif; padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;text-shadow: -1px -1px 0 rgba(0,0,0,0.3);font-weight:bold; color: #2E2E2E;
-  background-color: #f4f5f5; background-image: -webkit-gradient(linear, left top, left bottom, from(#f4f5f5), to(#dfdddd));
-  background-image: -webkit-linear-gradient(top, #f4f5f5, #dfdddd);
-  background-image: -moz-linear-gradient(top, #f4f5f5, #dfdddd);
-  background-image: -ms-linear-gradient(top, #f4f5f5, #dfdddd);
-  background-image: -o-linear-gradient(top, #f4f5f5, #dfdddd);
-  background-image: linear-gradient(to bottom, #f4f5f5, #dfdddd);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#f4f5f5, endColorstr=#dfdddd);
+  height: 80px;
+  padding-left: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
-.menu_topic:hover{
-  border:px solid #bfc4c4;
-  background-color: #d9dddd; background-image: -webkit-gradient(linear, left top, left bottom, from(#d9dddd), to(#c6c3c3));
-  background-image: -webkit-linear-gradient(top, #d9dddd, #c6c3c3);
-  background-image: -moz-linear-gradient(top, #d9dddd, #c6c3c3);
-  background-image: -ms-linear-gradient(top, #d9dddd, #c6c3c3);
-  background-image: -o-linear-gradient(top, #d9dddd, #c6c3c3);
-  background-image: linear-gradient(to bottom, #d9dddd, #c6c3c3);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#d9dddd, endColorstr=#c6c3c3);
+#logolink {
+  float: left;
 }
 
-.pagecontent {
-  margin: 2em;
-  margin-top: 0px;
-  padding-top: 0px;
+#appstorelogo {
+  width: 115px;
+  height: 80px;
+}
+
+#appstorelogo img {
+  display:block;
+  margin:auto;
+}
+
+#logoname {
+  font-family: 'Roboto Light', sans-serif;
+  float: left;
+  padding-top: 19px;
+  padding-bottom: 0px;
+  font-size: 40px;
+  padding-left: 15px;
+  color: #1ca7ce;
+}
+
+
+
+#content_container {
+  background-color: #fff;
+  margin: 0px;
+  padding: 0px;
+}
+
+
+
+#footer {
+  font-family: 'Roboto Light', sans-serif;
+  font-size: 1.1em;
+  line-height: 1.7em;
+  width: 100%;
+  color: #fff;
+  padding: 20px;
+  padding-top: 10px;
+}
+
+#footer .smaller {
+  font-size: 1em;
+  line-height: 1.6em;
+  color: #003b47;
 }
 
