--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,191 @@
+/* Fonts */
+/* cyrillic-ext */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Roboto Light'), local('Roboto-Light'), url(./assets/roboto/0eC6fl06luXEYWpBSJvXCIX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
+  unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
+}
+/* cyrillic */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Roboto Light'), local('Roboto-Light'), url(./assets/roboto/Fl4y0QdOxyyTHEGMXX8kcYX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* greek-ext */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Roboto Light'), local('Roboto-Light'), url(./assets/roboto/-L14Jk06m6pUHB-5mXQQnYX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
+  unicode-range: U+1F00-1FFF;
+}
+/* greek */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Roboto Light'), local('Roboto-Light'), url(./assets/roboto/I3S1wsgSg9YCurV6PUkTOYX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
+  unicode-range: U+0370-03FF;
+}
+/* vietnamese */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Roboto Light'), local('Roboto-Light'), url(./assets/roboto/NYDWBdD4gIq26G5XYbHsFIX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
+  unicode-range: U+0102-0103, U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Roboto Light'), local('Roboto-Light'), url(./assets/roboto/Pru33qjShpZSmG3z6VYwnYX0hVgzZQUfRDuZrPvH3D8.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Roboto Light'), local('Roboto-Light'), url(./assets/roboto/Hgo13k-tfSpn0qi1SFdUfZBw1xU1rKptJj_0jans920.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
+
 /* Master Styles */
 h1 {
-  color: #369; 
+  color: #004896;
   font-family: Arial, Helvetica, sans-serif;   
   font-size: 250%;
   margin-top: 10px;
 }
+
 h2, h3 { 
-  color: #444;
+  color: #004896;
   font-family: Arial, Helvetica, sans-serif;   
   font-weight: lighter;
 }
-body { 
-  margin: 2em; 
+
+html, body { 
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  color: #888;
 }
+
 body, input[text], button { 
-  color: #888; 
+  color: #888;
+  background-color: #5fc4b4;
   font-family: Cambria, Georgia; 
 }
+
+p {
+  color: #003772;
+}
+
+#loadingTemporary {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  padding: 2em;
+  font-size: 1.5em;
+}
+
+
+.menu_container {
+  background-color: #f2f2f2;
+  padding-left: 20px;
+  padding-bottom: 10px;
+}
+
+.menu_topic{
+  float: left;
+  width: 200px;
+  display: block;
+  box-sizing: border-box;
+  padding: 1em;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  border: solid 1px #ccc;
+  font-size: 12px;
+  text-decoration: none;
+  color: #888;
+}
+
+.menu_topic:hover {
+  text-decoration: none;
+  background-color: #e2e2e2;
+  border: solid 1px #bbb;
+  color: #777;
+}
+
+.navActive {
+  text-decoration: none;
+  background-color: #d2d2d2;
+  border: solid 1px #aaa;
+  color: #666;
+}
+
+.search_bar {
+  float: right;
+  margin-right: 20px;
+}
+
+input#search {
+  height: 34px;
+  background-color: #fff;
+  font-size: 15px;
+  width: 400px;
+  border: solid 1px #ccc;
+  -webkit-appearance: none;
+}
+
+.menu_clear {
+  clear: both;
+  font-size: 0px;
+  padding: 0px;
+  margin: 0px;
+  line-height: 0px
+}
+
+
+
+#large_background {
+  display: none;
+  background-color: #fff;
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+  height: 400px;
+  background-image: url(./assets/store_background1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.large_background1 {
+  background-image: url(./assets/store_background1.jpg);
+}
+
+.large_background2 {
+  background-image: url(./assets/store_background2.jpg);
+}
+
+
+
+#page_content {
+  background-color: #fff;
+  color: #AB3C3E;
+  width: 100%;
+  margin: 0px;
+  padding: 20px;
+  padding-top: 20px
+  padding-bottom: 20px;
+}
+
 
 /* 
  * See https://github.com/angular/angular.io/blob/master/public/docs/_examples/styles.css
