--- a/app/app.component.html
+++ b/app/app.component.html
@@ -10,9 +10,20 @@
 	</div>
 
 	<div id="footer" class="footer">
-		<div>Spaceify Appstore</div>
-		<div class="smaller">
-			Made with code and love. <img style="width: 16px; height: 16px;" src="./assets/heart_32x32.png" />
+		<div class="section_w35">
+			<div class="footerContentLeft smaller">
+				<img class="floatLeft" id="32pxc" src="./assets/by-nc-nd_eu.png" width="91" height="32">
+				<span class="floatLeft">Copyright &copy; 2014-2016 Spaceify.org</span>
+			</div>
+		</div>
+		<div class="section_w30">
+			<div class="footerContentLeft">&nbsp;</div>
+		</div>
+		<div class="section_w35">
+			<div class="footerContentRight smaller">
+				Made with code and love.
+				<img style="width: 16px; height: 16px;" src="./assets/heart_32x32.png" />
+			</div>
 		</div>
 	</div>
 </div>
