--- a/app/install.component.html
+++ b/app/install.component.html
@@ -9,10 +9,14 @@
 	<br class="menu_clear" />
 </nav>
 
-<div id="large_background" class="large_background1">
-	<div>awd awd awd awdawdw daw dwad awd awdawd awd
+<div id="large_background" class="large_background large_background1">
+	<div class="content">
+		<h1>Comprehensive Apps</h1>
+		<div>Spaceify apps provides users access to their screens from their smartphones,
+		enabling energy management and media sharing.</div>
 	</div>
 </div>
+<div class="large_background_footer">&nbsp;</div>
 
 <div id="page_content" class="page_content">
 	<applist [apps]="apps" [selectedMode]="selectedMode"></applist>
