--- a/app/manage.component.html
+++ b/app/manage.component.html
@@ -9,10 +9,13 @@
 	<br class="menu_clear" />
 </nav>
 
-<div id="large_background" class="large_background1">
-	<div>awd awd awd awdawdw daw dwad awd awdawd awd
+<div id="large_background" class="large_background large_background1">
+	<div class="content">
+		<h1>Easy to Manage</h1>
+		<div>Spaceify Edge Platform can be easily managed from any device with a web browser.</div>
 	</div>
 </div>
+<div class="large_background_footer">&nbsp;</div>
 
 <div id="page_content" class="page_content">
 	<applist [apps]="apps" [selectedMode]="selectedMode"></applist>
