--- a/app/applist.component.css
+++ b/app/applist.component.css
@@ -1,4 +1,94 @@
 
+#applist {
+  margin-bottom: 15px;
+}
+
+/* * {
+  margin: 0;
+  padding: 0;
+}*/
+
+ul {
+  width: 100%; /* 100% or define a width */
+  list-style: none;
+  margin: 0;
+  margin-bottom: 15px;
+  padding: 0;
+  padding-bottom: 15px;
+  overflow: auto;
+}
+
+ul > li {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 15px;
+}
+
+li span {
+  margin: 0;
+  display: block;
+  clear: both;
+  padding: 25px 0;
+}
+
+ul ul li {
+  padding: 0;
+  float: left;
+  width: 300px;
+  height: 300px;
+  margin: 15px 15px 0px 0px;
+}
+
+ul ul li:nth-child(3) {
+  margin-right: 15px !important;
+}
+
+ul li a {
+  margin: 0;
+  padding: 0;
+  border: solid 1px #ddd;
+  border-radius: 3px;
+  display: block;
+  width: 270px; /* 300px - 2*15px */
+  height: 270px; /* 300px - 2*15px */
+  padding: 15px 15px;
+  color: #003b7c;
+  text-decoration: none;
+  transition: 0.4s;
+}
+
+ul li a:hover {
+  background: #eee;
+}
+
+.appicon {
+  margin: 0;
+  padding: 0;
+  width: 128px;
+  height: 128px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.appicon img {
+  margin: 0;
+  padding: 0;
+  max-width: 128px;
+  max-height: 128px;
+}
+
+.appname {
+  line-height: 1.7em;
+  font-weight: bolder;
+}
+
+.appdescription {
+  line-height: 1.5em;
+}
+
+
+/*
 ul
 {
   list-style-type: none;
@@ -44,10 +134,6 @@ li:hover {
   justify-content: center;
 }
 
-img.icon {
-  max-width: 80px;
-  max-height: 80px;
-}
 
 div.text {
   padding-left: 10px;
@@ -70,3 +156,4 @@ div.description {
   margin: 0px;
   padding: 0px;
 }
+*/
